--- a/first_version/generate_csv.ipynb
+++ b/first_version/generate_csv.ipynb
@@ -2,33 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def generate_random_data(num_data_points=100, seed=0):\n",
+    "    # Set the random seed for reproducibility\n",
+    "    np.random.seed(seed)\n",
+    "\n",
+    "    # Generate random data\n",
+    "    data = {\n",
+    "        'organization_id': range(1, num_data_points + 1),\n",
+    "        'low_density_subs': np.random.randint(0, 10, num_data_points),\n",
+    "        'high_density_subs': np.random.randint(0, 10, num_data_points),\n",
+    "        'physical_servers': np.random.randint(1, 10, num_data_points),\n",
+    "        'virtual_machines': np.random.randint(0, 50, num_data_points),\n",
+    "        'number_of_vms_cloud': np.random.randint(0, 20, num_data_points),\n",
+    "        'sockets': np.random.randint(1, 10, num_data_points),\n",
+    "        'virtualization_hosts': np.random.randint(0, 5, num_data_points)\n",
+    "    }\n",
+    "    \n",
+    "    return data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "# Set random seed for reproducibility\n",
-    "np.random.seed(0)\n",
-    "\n",
-    "# Number of organizations\n",
-    "n = 1000\n",
-    "\n",
-    "# Generate random data\n",
-    "data = {\n",
-    "    'organization_id': range(1, n + 1),\n",
-    "    'low_density_subs': np.random.randint(0, 10, n),\n",
-    "    'high_density_subs': np.random.randint(0, 10, n),\n",
-    "    'physical_servers': np.random.randint(1, 10, n),\n",
-    "    'virtual_machines': np.random.randint(0, 50, n),\n",
-    "    'number_of_vms_cloud': np.random.randint(0, 20, n),\n",
-    "    'sockets': np.random.randint(1, 10, n),\n",
-    "    'virtualization_hosts': np.random.randint(0, 5, n)\n",
-    "}\n",
-    "\n",
-    "# Create DataFrame\n",
-    "df = pd.DataFrame(data)\n",
     "\n",
     "#   We are classifying organizations as compliant or non-compliant based on the following rules:\n",
     "#   https://www.suse.com/products/terms_and_conditions.pdf\n",
@@ -61,7 +76,19 @@
     "    if sockets > (total_subs * 2):\n",
     "        return 0\n",
     "    \n",
-    "    return 1  # If none of the above conditions are met, the organization is compliant.\n",
+    "    return 1  # If none of the above rules match, then the organization is compliant.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.exists('pac_output.csv'):\n",
+    "  df = pd.read_csv('pac_output.csv')\n",
+    "else:\n",
+    "  df = pd.DataFrame(generate_random_data(num_data_points=1000))\n",
     "\n",
     "# Applying the function to each row of the DataFrame\n",
     "df['compliance'] = df.apply(classify_compliance, axis=1)\n",
